trying to fix scrolling on iphones

--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,8 @@ h5 {
 
 .scroll-wrapper {
 	-webkit-overflow-scrolling: touch;
-  	overflow-x: scroll;
+    overflow-x: scroll;
+    overflow-y: scroll;
 }
 
 /* --------------------------------------------------------- */
@@ -168,7 +169,20 @@ h5 {
   }
 }
 
-/* setting the width for ipad to computer 1024-1366px */
+@media only screen and (max-width: 1680px) {
+        
+  .row { padding: 0 2%; }
+  section { padding: 0px 0; }
+  .container-teams img {
+    width: 140px;
+    height: 140px;
+    margin: 2px;
+  }
+  .rink-text-box {
+    height: 35vh;
+  } 
+}
+
 @media only screen and (max-width: 1366px) {
         
   .row { padding: 0 2%; }
@@ -180,7 +194,7 @@ h5 {
   }
   .rink-text-box {
     height: 35vh;
-  }
+  } 
 }
 
 @media only screen and (max-width: 1024px) {
@@ -254,6 +268,14 @@ h5 {
     margin-top: 10px;
     font-size: 25%;
   }
+  #frame {
+    transform: scale(.75);
+  }
+  .embed-responsive {
+    height: 325%;
+    margin: -50px;
+    width: 125%;
+  }
 }
 
 @media only screen and (max-width: 768px) {
@@ -266,7 +288,7 @@ h5 {
     margin: 2px;
   }
   .rink-text-box {
-    height: 15vh;
+    height: 10vh;
   }
   .App-header {
     min-height: 3vh;
@@ -297,6 +319,14 @@ h5 {
     margin-left: 5px;
     margin-top: 10px;
     font-size: 50%;
+  }
+  #frame {
+    transform: scale(.75);
+  }
+  .embed-responsive {
+    height: 200%;
+    margin: -50px;
+    width: 125%;
   }
 }
 
@@ -346,6 +376,14 @@ h5 {
     margin-left: 5px;
     margin-top: 10px;
     font-size: 25%;
+  }
+  #frame {
+    transform: scale(.75);
+  }
+  .embed-responsive {
+    height: 325%;
+    margin: -50px;
+    width: 125%;
   }
 }
 
@@ -400,7 +438,10 @@ h5 {
 
 @media only screen and (max-width: 414px) {
         
-  .row { padding: 0 2%; }
+  .row { 
+    padding: 0 2%;
+    height: 5vh;
+  }
   section { padding: 0px 0; }
   .container-teams img {
     width: 74px;
@@ -448,8 +489,12 @@ h5 {
     margin-top: 10px;
     font-size: 25%;
   }
+  #frame {
+    transform: scale(.75);
+  }
   .embed-responsive {
     height: 250%;
+    margin: -70px;
   }
 }
 
@@ -499,6 +544,6 @@ h5 {
     font-size: 25%;
   }
   .embed-responsive {
-    height: 250%;
+    height: 200%;
   }
 }
